<resources>
    <string name="app_name">BigAndYellow</string>
    <string name="user_avatar">user_avatar</string>
    <string name="darrell_steward">Darrell Steward</string>
    <string name="lorem_ipsum">Привет! lorem ipsum test message dalshe zabil</string>
    <string name="write">Написать…</string>
    <string name="send_button">send button</string>
    <string-array name="smiles">
        <item>😎</item>
        <item>😌</item>
        <item>😌</item>
        <item>😔</item>
        <item>😋</item>
        <item>😛</item>
        <item>😍</item>
        <item>😁</item>
        <item>👍</item>
        <item>😘</item>
        <item>🎃</item>
        <item>😊</item>
        <item>😚</item>
        <item>🙃</item>
        <item>☺</item>
        <item>😅</item>
        <item>😂</item>
        <item>😇</item>
        <item>😉</item>
        <item>😌</item>
        <item>😗</item>
        <item>😜</item>
        <item>😎</item>
        <item>😏</item>
        <item>😜</item>
        <item>😗</item>
        <item>😗</item>
        <item>😂</item>
        <item>😎</item>
        <item>😌</item>
        <item>😌</item>
        <item>😔</item>
        <item>😋</item>
        <item>😛</item>
        <item>😍</item>
        <item>😁</item>
        <item>👍</item>
        <item>😘</item>
        <item>🎃</item>
        <item>😊</item>
        <item>😚</item>
        <item>🙃</item>
        <item>☺</item>
        <item>😅</item>
        <item>😂</item>
        <item>😇</item>
        <item>😉</item>
        <item>😌</item>
        <item>😗</item>
        <item>😜</item>
        <item>😎</item>
        <item>😏</item>
        <item>😜</item>
        <item>😗</item>
        <item>😗</item>
        <item>😂</item>
    </string-array>
    <string name="channels">Channels</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>
    <string name="search">Search…</string>
    <string name="users">Users…</string>
    <string name="search_button">search_button</string>
    <string name="log_out">Log Out</string>
    <string name="back_arrow">back arrow</string>
    <string name="sample_email">bigandyellow@company</string>
    <string name="topic_name">#%1$s</string>
    <string name="topic_arrow">topic arrow</string>
    <string name="subscribed">Subscribed</string>
    <string name="all_streams">All Streams</string>
</resources>