<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/custom_green_primary_variant">

        <ImageButton
            android:id="@+id/back"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:contentDescription="@string/send_button"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/chat_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/message_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="10dp" />

    <LinearLayout
        android:id="@+id/topics_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/topic_recycler"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="10dp" />

        <EditText
            android:id="@+id/topic_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:autofillHints="true"
            android:background="@drawable/bg_message_field"
            android:hint="@string/topic_name"
            android:inputType="textMultiLine"
            android:padding="6dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/message_box_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/send_message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints="true"
            android:background="@drawable/bg_message_field"
            android:hint="@string/write"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <ImageButton
                android:id="@+id/send_message_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:contentDescription="@string/send_button"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_add_file_to_message" />

            <ImageButton
                android:id="@+id/edit_message_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:contentDescription="@string/send_button"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_check_circle_24"
                android:visibility="gone"
                app:tint="@color/teal_200" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>